--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: 'WE Design'
 description: 'WE Design is a student group form the University of Manitoba that creates Wind Turbines.'
 logo: 'assets/images/logo.png'
-favicon: 'assets/images/favicon.ico'
+favicon: 'assets/images/WE Design Favicon Logo.ico'
 baseurl: '/mundana-theme-jekyll'
 disqus: 'demowebsite'
 email: 'wowthemesnet@gmail.com'
