--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: 'WE Design'
 description: 'WE Design is a student group form the University of Manitoba that creates Wind Turbines.'
-logo: 'assets/images/logo.png'
+logo: 'assets/images/WE Design Favicon Logo.png'
 favicon: 'assets/images/WE Design Favicon Logo.png'
 baseurl: '/mundana-theme-jekyll'
 disqus: 'demowebsite'
